# mocha

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
doc/img/: README.md  mocha.d2
doc/proj/: checklist_template.md  stages.md  xbar_peri.md
doc/ref/: dev_guide.md
hw/data/: common_project_cfg.hjson
hw/ip/common_cells/: common_cells.core
hw/ip/common_cells/include/common_cells/: registers.svh
hw/ip/common_cells/rtl/: counter.sv  delta_counter.sv  exp_backoff.sv  fifo_v3.sv  id_queue.sv  lzc.sv  onehot_to_bin.sv  rr_arb_tree.sv  stream_fork.sv  stream_fork_dynamic.sv  stream_join_dynamic.sv  stream_mux.sv
hw/top_chip/: REUSE.toml  chip_mocha_genesys2.core  top_chip_system.core  top_mocha_racl_pkg.core  top_pkg.core
hw/top_chip/data/: clkmgr_cfg.hjson  pins_genesys2.xdc  placement_genesys2.xdc  pwrmgr_cfg.hjson  rstmgr_cfg.hjson  timing_genesys2.xdc
hw/top_chip/dv/: README.md  cmake.hjson  mocha_sim_cfgs.hjson  top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/dv/env/: top_chip_dv_env.core  top_chip_dv_env.sv  top_chip_dv_env_pkg.sv  top_chip_dv_virtual_sequencer.sv
hw/top_chip/dv/env/seq_lib/: top_chip_dv_base_vseq.sv  top_chip_dv_i2c_host_tx_rx_vseq.sv  top_chip_dv_i2c_tx_rx_vseq.sv  top_chip_dv_vseq_list.sv
hw/top_chip/dv/sim_sram_axi/: README.md  sim_sram_axi.core  sim_sram_axi_if.sv  sim_sram_axi_sink.sv
hw/top_chip/dv/tb/: tb.sv
hw/top_chip/dv/verilator/: top_chip_verilator.cc  top_chip_verilator.core  top_chip_verilator.sv
hw/top_chip/ip/xbar_peri/data/: xbar_peri.hjson
hw/top_chip/ip/xbar_peri/data/autogen/: xbar_peri.hjson
hw/top_chip/ip/xbar_peri/dv/autogen/: tb__xbar_connect.sv  xbar_cover.cfg  xbar_env_pkg__params.sv  xbar_peri_bind.sv
hw/top_chip/ip/xbar_peri/rtl/autogen/: tl_peri_pkg.sv  xbar_peri.sv
hw/top_chip/ip_autogen/alert_handler/: BUILD  alert_handler.core  alert_handler_component.core  alert_handler_pkg.core  alert_handler_reg.core  defs.bzl
hw/top_chip/ip_autogen/alert_handler/data/: BUILD  alert_handler.hjson  mocha_alert_handler.ipconfig.hjson
hw/top_chip/ip_autogen/alert_handler/doc/: theory_of_operation.md
hw/top_chip/ip_autogen/alert_handler/dv/: alert_handler_sim.core  alert_handler_sim_cfg.hjson
hw/top_chip/ip_autogen/alert_handler/dv/cov/: alert_handler_cov.core
hw/top_chip/ip_autogen/alert_handler/dv/env/: alert_handler_env.core
hw/top_chip/ip_autogen/alert_handler/dv/sva/: alert_handler_sva.core
hw/top_chip/ip_autogen/alert_handler/dv/tb/: alert_handler_tb.core
hw/top_chip/ip_autogen/alert_handler/dv/tests/: alert_handler_test.core
hw/top_chip/ip_autogen/alert_handler/fpv/: alert_handler_esc_timer_fpv.core  alert_handler_ping_timer_fpv.core
hw/top_chip/ip_autogen/alert_handler/rtl/: alert_handler_reg_pkg.sv  alert_handler_reg_top.sv
hw/top_chip/ip_autogen/clkmgr/: BUILD  README.md  clkmgr.core  clkmgr_pkg.core  clkmgr_reg.core  defs.bzl
hw/top_chip/ip_autogen/clkmgr/data/: BUILD  clkmgr.hjson  mocha_clkmgr.ipconfig.hjson
hw/top_chip/ip_autogen/clkmgr/doc/: interfaces.md  registers.md
hw/top_chip/ip_autogen/clkmgr/dv/: README.md  clkmgr_sim.core  clkmgr_sim_cfg.hjson
hw/top_chip/ip_autogen/clkmgr/rtl/: clkmgr.sv  clkmgr_pkg.sv  clkmgr_reg_pkg.sv  clkmgr_reg_top.sv
hw/top_chip/ip_autogen/gpio/data/: gpio_testplan.hjson
hw/top_chip/ip_autogen/gpio/dv/: gpio_sim_cfg.hjson
hw/top_chip/ip_autogen/pwrmgr/: BUILD  README.md  defs.bzl  pwrmgr.core  pwrmgr_pkg.core  pwrmgr_reg.core
hw/top_chip/ip_autogen/pwrmgr/data/: BUILD  mocha_pwrmgr.ipconfig.hjson  pwrmgr.hjson
hw/top_chip/ip_autogen/pwrmgr/doc/: interfaces.md  registers.md
hw/top_chip/ip_autogen/pwrmgr/dv/: README.md  pwrmgr_sim.core  pwrmgr_sim_cfg.hjson
hw/top_chip/ip_autogen/pwrmgr/rtl/: pwrmgr.sv  pwrmgr_cdc.sv  pwrmgr_fsm.sv  pwrmgr_pkg.sv  pwrmgr_reg_pkg.sv  pwrmgr_reg_top.sv
hw/top_chip/ip_autogen/rstmgr/: BUILD  README.md  defs.bzl  rstmgr.core  rstmgr_cnsty_chk.core  rstmgr_pkg.core  rstmgr_reg.core
hw/top_chip/ip_autogen/rstmgr/data/: BUILD  mocha_rstmgr.ipconfig.hjson  rstmgr.hjson
hw/top_chip/ip_autogen/rstmgr/doc/: interfaces.md  registers.md
hw/top_chip/ip_autogen/rstmgr/dv/: README.md  rstmgr_sim.core  rstmgr_sim_cfg.hjson
hw/top_chip/ip_autogen/rstmgr/rtl/: rstmgr.sv  rstmgr_pkg.sv
hw/top_chip/ip_autogen/rv_plic/data/: rv_plic.hjson
hw/top_chip/ip_autogen/rv_plic/rtl/: rv_plic_reg_pkg.sv
hw/top_chip/lint/: top_chip.vlt  top_chip_system.vlt
hw/top_chip/rtl/: axi_sram.sv  chip_mocha_genesys2.sv  clkgen_xil7series.sv  ethernet_wrapper.sv  top_chip_system.sv  top_pkg.sv  top_racl_pkg.sv
nix/: fpga.nix
rdl/: mocha.rdl
rdl/ip/: plic.rdl
sw/: CMakeLists.txt  cheri_toolchain.cmake
sw/cmake/: linux.cmake  opensbi.cmake  rootfs.cmake  tests.cmake  uboot.cmake
sw/device/: CMakeLists.txt
sw/device/bootrom/: CMakeLists.txt  bootrom.c
sw/device/devicetree/: mocha.S  mocha.dts
sw/device/examples/: CMakeLists.txt  hello_world.c  software_reset.c  spi.c
sw/device/examples/hello_world/: CMakeLists.txt  boot.S  build.sh  hello_world.c  link.ld
sw/device/examples/tag_check/: CMakeLists.txt  tag_check.S
sw/device/lib/: CMakeLists.txt
sw/device/lib/boot/: boot.S  init_vectors.S  memory.ld  mocha.ld
sw/device/lib/hal/: CMakeLists.txt  dv_test_status.h  hart.h  i2c.c  mmio.h  mocha.c  mocha.h  multibit.h  plic.c  plic.h  rstmgr.c  rstmgr.h  spi_device.c  spi_device.h  timer.c  timer.h
sw/device/lib/hal/autogen/: plic.h
sw/device/lib/test_framework/: CMakeLists.txt  main.c
sw/device/tests/: CMakeLists.txt
sw/device/tests/entropy_src/: smoketest.c
sw/device/tests/i2c/: host_tx_rx_test.c
sw/device/tests/isa/: atomics.c
sw/device/tests/opensbi/: CMakeLists.txt  test_payload.S
sw/device/tests/plic/: smoketest.c
sw/device/tests/spi_device/: flash_mode.c  smoketest.c
sw/device/tests/timer/: interrupt.c  smoketest.c
util/: artefacts.py  clang_format.py  clang_tidy.py  fpga_runner.py  genesys2-openocd-cfg.tcl  lockfiles_check.sh  rdlgenerator.py  vendor.py  verible_format.sh  verilator_runner.sh
(+31 files in other folders)
