# Copyright lowRISC contributors (COSMIC project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "mocha"
version = "0.0.0"
description = "CHERI-Mocha is a secure enclave reference design and is part of the COSMIC project."
requires-python = ">=3.10"

dependencies = [
    "anytree==2.8.0",
    "hjson==3.1.0",
    "wheel==0.41.2",
    "pyserial==3.5",
    "pydantic>=2.8.2,<3",
    "jinja2>=3.1.6,<4",
    "semantic-version>=2.10.0,<3",
    "pycryptodome>=3.23.0,<4",
    "tabulate>=0.9.0,<0.10",
    "setuptools>=80.9.0",
    "packaging>=25.0",
    "mako>=1.2",
    "fusesoc==2.4.3",
    "pyright>=1.1.403",
    "ruff>=0.9.6",
    "reuse>=5.0.2",
    "pytest>=8.4.1",
    "twine>=6.1.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 79
extend-exclude = [
  "hw/vendor",
  "util/vendor.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "PTH", "C4", "A", "RUF", "PERF"]
